<resources>
    <string name="app_name">Rakyat</string>
    <string name="select_daily_limit">Select Daily Limit</string>
    <string name="leave_passwords_blank_if_you_still_want_to_use_the_old_password">Leave Passwords blank if you still want to use the old Password</string>
    <string name="_60">+60</string>
    <string name="_254">+254</string>
    <string name="_0712345678">0712345678</string>
    <string name="mainfragment">MainFragment</string>
    <string name="verification">VERIFICATION</string>
    <string name="place_your_finger_on_the_sensor">Place Your finger on the sensor</string>
    <string name="request_password">Request Password</string>
    <string name="email">Email</string>
    <string name="insert_email_to_continue">Insert Email to continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="transaction_history">Transaction History</string>
    <string name="password">PASSWORD</string>
    <string name="s_i_g_n_i_n">S I G N I N</string>
    <string name="sign_up_for_an_account">SIGN UP FOR AN ACCOUNT?</string>
    <string name="forgot_password1">Forgot Password?</string>
    <string name="thank_you">Thank You!</string>
    <string name="your_transaction_was_successful">Your transaction was successful</string>
    <string name="request_otp">Request Otp</string>
    <string name="verify">VERIFY</string>
    <string name="username">Username</string>
    <string name="welcome_i_rakyat">Welcome I Rakyat</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="amount">AMOUNT</string>
    <string name="phone">Phone</string>
    <string name="nric">NRIC</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="s_i_g_n_u_p">S I G N U P</string>
    <string name="already_have_an_account_login">ALREADY HAVE AN ACCOUNT Login?</string>
    <string name="_010257308">010257308</string>
    <string name="to">TO</string>
    <string name="joseph_mwaura">Joseph Mwaura</string>
    <string name="tesla">Tesla</string>
    <string name="company">Company</string>
    <string name="kcb">KCB</string>
    <string name="bank">Bank</string>
    <string name="accountnumber">AccountNumber</string>
    <string name="_25615">25615</string>
    <string name="reference_note">Reference Note</string>
    <string name="food">Food</string>
    <string name="_1548_0">£1548.0</string>
    <string name="completed">COMPLETED</string>
    <string name="update">Update</string>
    <string name="fund_transfer">Fund Transfer</string>
    <string name="pay_bills">Pay Bills</string>
    <string name="_0_00">0.00</string>
    <string name="balance">Balance</string>
    <string name="account_number">Account Number</string>
    <string name="my_wallet_balance">My Wallet Balance</string>
    <string name="welcome_to_i_rakyat">Welcome to I Rakyat</string>
    <string name="otp_has_been_sent_to_you_on_your_mobile_phone_please_enter_it_below">OTP has been sent to you on your mobile phone. Please enter it below</string>
    <string name="or_verify_via_fingerprint_below">Or Verify via Fingerprint Below</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="what_is_the_name_of_the_primary_school_you_went_to">what is the name of the primary school you went to</string>
    <string name="what_is_the_name_of_the_high_school_you_went_to">what is the name of the high school you went to</string>
    <string name="what_is_the_name_of_the_university_you_went_to">what is the name of the university you went to</string>
    <string name="logo1">logo1</string>
</resources>