<?xml version="1.0" encoding="utf-8" standalone="no"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="150dp"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/logo1"
                    android:src="@drawable/logo" />

               <!-- <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="#757575" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_for_a_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:minHeight="45dp"
                    android:singleLine="true"
                    android:textColor="@color/blue_grey_800"
                    android:theme="@style/EditText.Green" />-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/blue_grey_200" />

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/signupemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/blue_grey_800"
                    android:theme="@style/EditText.Green" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_xsmall" />
<!--
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/blue_grey_200" />
-->
                <!--
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/countryCode"
                        style="@style/EditText.Flat.Grey"
                        android:layout_width="50dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:autofillHints=""
                        android:background="@drawable/edit_text_round_bg_white"
                        android:focusable="false"
                        android:hint="@string/_254"
                        android:inputType="phone"
                        android:paddingLeft="@dimen/spacing_middle"
                        android:paddingRight="@dimen/spacing_middle" />

                    <EditText
                        android:id="@+id/sign_in_phone"
                        style="@style/EditText.Flat.Grey"
                        android:layout_width="300dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:autofillHints=""
                        android:background="@drawable/edit_text_round_bg_white"
                        android:hint="@string/_0712345678"
                        android:inputType="phone"
                        android:paddingLeft="@dimen/spacing_middle"
                        android:paddingRight="@dimen/spacing_middle" />


                    <View
                        android:layout_width="@dimen/spacing_large"
                        android:layout_height="0dp" />


                </LinearLayout>

-->
                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />
<!--
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nric"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/blue_grey_200" />

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/sign_in_nric"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="number"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/blue_grey_800"
                    android:theme="@style/EditText.Green" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_is_the_name_of_the_primary_school_you_went_to"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/blue_grey_200" />

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/sign_in_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/blue_grey_800"
                    android:theme="@style/EditText.Green" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_is_the_name_of_the_high_school_you_went_to"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/blue_grey_200" />

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/blue_grey_800"
                    android:theme="@style/EditText.Green" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_is_the_name_of_the_university_you_went_to"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/blue_grey_200" />

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/footballTeam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/blue_grey_800"
                    android:theme="@style/EditText.Green" />
-->
                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/blue_grey_200" />

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/sign_in_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/blue_grey_800"
                    android:theme="@style/EditText.Green" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/blue_grey_200" />

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/cpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/blue_grey_800"
                    android:theme="@style/EditText.Green" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:textColor="@color/red_800"
                    android:background="@drawable/btn_rounded_green_300"
                    android:text="@string/s_i_g_n_u_p"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    tools:ignore="MissingClass" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />

                <LinearLayout
                    android:id="@+id/sign_up_for_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/click_to_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account_login"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/blue_grey_400" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_middle" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />

                <LinearLayout
                    android:id="@+id/forgotPassTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/forgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                        android:textColor="@color/blue_grey_400" />


                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_xlarge" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_xlarge" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</layout>